<resources>
    <string name="app_name">Werkstuk_Arne_Mergan</string>
    <string name="menu_settings">instellingen</string>
    <string name="search">search</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close_approach_data">Close approach data</string>
    <string name="info">Info</string>
    <string name="magnitude">Magnitude:</string>
    <string name="diameter">Diameter:</string>
    <string name="hazardous">Hazardous:</string>
    <string name="eenheid">KM</string>
    <string name="nodata">No data</string>
    <string name="chechinternet">Please check internet connection</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
