<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainDetailViewFragment">
    <ProgressBar
        android:id="@+id/detail_progress"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ProgressBar>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    android:gravity="center_horizontal"
                    android:background="@color/colorPrimaryDark">
                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="40dp"
                        android:src="@mipmap/ic_exclamation_mark_foreground">
                    </ImageView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/item_asteroid_name_det"
                        android:textSize="28sp"
                        android:layout_marginBottom="10dp"
                        android:textStyle="bold"
                        android:text="test" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/info"
                        android:paddingLeft="2sp"
                        android:paddingBottom="10sp"
                        android:textStyle="bold"
                        android:textSize="20sp">
                    </TextView>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary">
                        <TableLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TableRow android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/magnitude"
                                    android:textColor="@color/colorAccent"
                                    android:textStyle="bold"
                                    android:textSize="16sp"
                                    android:paddingLeft="2sp"
                                    android:paddingBottom="10sp" />
                                <TextView
                                    android:id="@+id/value_magnitude"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textSize="20sp"
                                    android:textColor="@color/white"
                                    android:paddingLeft="2sp"
                                    android:paddingBottom="10sp" />
                            </TableRow>
                            <TableRow android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/diameter"
                                    android:textColor="@color/colorAccent"
                                    android:textStyle="bold"
                                    android:textSize="16sp"
                                    android:paddingLeft="2sp"
                                    android:paddingBottom="10sp" />
                                <TextView
                                    android:id="@+id/value_diameter"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textSize="20sp"
                                    android:textColor="@color/white"
                                    android:paddingLeft="2sp"
                                    android:paddingBottom="10sp" />
                            </TableRow>
                            <TableRow android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/hazardous"
                                    android:textColor="@color/colorAccent"
                                    android:textStyle="bold"
                                    android:textSize="16sp"
                                    android:paddingLeft="2sp"
                                    android:paddingBottom="10sp" />
                                <TextView
                                    android:id="@+id/value_hazardous"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textSize="20sp"
                                    android:textColor="@color/white"
                                    android:paddingLeft="2sp"
                                    android:paddingBottom="10sp" />
                            </TableRow>
                        </TableLayout>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/close_approach_data"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:paddingLeft="2sp"
                        android:paddingBottom="10sp"
                        >
                    </TextView>
                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/listview_close_date">
                    </androidx.recyclerview.widget.RecyclerView>
                </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>